# 01

./: .env.example  .gitignore  .gitmessage  .gitmodules  CANON.md  CLAUDE.md  DEVLOG.md  NEXT_SESSION.md  README.md  chat.md  pyproject.toml
.sisyphus/plans/: dedup-retrieval.md  fix-fact-coverage-prompt.md  pilot-docstring-test.md
ai-lab/: README.md  ask_o1.py  config.py  critic.py  episodic.json  heuristics.json  llm.py  main.py  memory.py  o1_next_question_mvp.md  o1_system_prompt.md  o1_system_prompt_indexed_draft.md  opencode_executor.py  oracle-v2-architecture-review.md  oracle-v2-clean-room.md  planner.py  query_o1_feedback.py  state.py  test_integration.py  tools.py  worker.py
ai-lab/evals/knowledge_plane/: exporters.py  local_backend.py  normalization.py  runner.py
ai-lab/evals/knowledge_plane/results/: doc_embeddings.json  export_manifest.json  latest.json
ai-lab/goal_001_results/: GOAL_001_REPORT.md  sweep_20260313-184203.json  sweep_20260313-184349.json  sweep_20260313-185311.json
ai-lab/goals/: 001-model-optimization.md
docs/: ORIGIN.md  chat.md
docs/lab/: architecture.md  o1-o3-deployment-decision.md  o1-strategy-prompt.md  opencode-workflow-research-prompt.md  oracle-omo-integration-query.md  oracle-omo-integration-response.json  oracle-v2-clean-room-response.json
docs/lab/OpenCode/: autonomous-loop-roadmap.md  model-provider-strategy.md  oracle-autonomous-loop-query.md  oracle-autonomous-loop-response.json
docs/lab/model-eval/: README.md  gpt54-q2-platform.md
